contrib/platiagro/projects/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projects
spec:
  selector:
    matchLabels:
      app: projects
  template:
    metadata:
      labels:
        app: projects
    spec:
      containers:
      - name: projects
        image: docker.io/platiagro/projects:0.2.0-SNAPSHOT
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
      serviceAccountName: platiagro
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persistence-agent
spec:
  selector:
    matchLabels:
      app: persistence-agent
  template:
    metadata:
      labels:
        app: persistence-agent
    spec:
      containers:
      - name: persistence-agent
        image: docker.io/platiagro/persistence-agent:0.2.0-SNAPSHOT
        imagePullPolicy: IfNotPresent
      serviceAccountName: platiagro
